# -realtime-sign-language-classifier

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
data/: sample_frames.csv  sign_prototypes.csv
include/ai_sign/: Classifier.hpp  FrameSource.hpp
scripts/: build-mingw.bat  open-showcase.ps1
showcase/: app.js  index.html  styles.css
src/: Classifier.cpp  FrameSource.cpp  main.cpp
